Devops/dashboard-nana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-svc
spec:
  rules:
  - host: dashboard.com
    http:
      paths:
      - pathType: Prefix 
        path: "/" 
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
